fix image problem on iphone

--- a/frontend/src/styles/landing.scss
+++ b/frontend/src/styles/landing.scss
@@ -53,6 +53,7 @@
     img{
       position:absolute;
       object-fit: cover;
+      top: 0;
       object-position: center;
       z-index: 200;
       width: 100%;
